--- a/libraries/loader.html
+++ b/libraries/loader.html
@@ -158,8 +158,8 @@ $this-&gt;<kbd>fubar</kbd>-&gt;function();</code>
 
 <h2>$this->load->scaffolding('<var>table_name</var>')</h2>
 
-<p>This function lets you enable scaffolding.  Please see the
-<a href="../general/scaffolding.html">scaffolding</a> section for more info.</p>
+<p>此函數讓您啟動 scaffolding.  請參閱
+<a href="../general/scaffolding.html">scaffolding</a> 章節瞭解更多。</p>
 
 
 
@@ -174,23 +174,22 @@ and merged into one array for conversion to variables.
 
 
 <h2>$this->load->helper('<var>file_name</var>')</h2>
-<p>This function loads helper files，where <var>file_name</var> is the name of the file，without the <kbd>_helper.php</kbd> extension.</p>
+<p>此函數載入 helper 檔案，<var>file_name</var> 檔名後面請不要加上 <kbd>_helper.php</kbd>。</p>
 
 
 <h2>$this->load->plugin('<var>file_name</var>')</h2>
-<p>This function loads plugins files，where <var>file_name</var> is the name of the file，without the <kbd>_plugin.php</kbd> extension.</p>
+<p>此函數載入 plugins 檔案，<var>file_name</var> 檔名後面請不要加上 <kbd>_plugin.php</kbd>。</p>
 
 <h2>$this->load->file('<var>filepath/filename</var>'，<kbd>true/false</kbd>)</h2>
-<p>This is a generic file loading function.  Supply the filepath and name in the first parameter and it will open and read the file.
-By default the data is sent to your browser，just like a View file，but if you set the second parameter to <kbd>true</kbd> (boolean)
-it will instead return the data as a string.</p>
+<p>這是一般的載入函數。簡單的設定第一個參數路徑及檔案名稱，系統將會打開此檔案。就像是瀏覽檔案一樣，預設值會直接呈現在瀏覽器畫面，
+如果設定第二個參數為<kbd>true</kbd> (boolean)，它將會把檔案內容存放在變數裡面。</p>
 
 
 <h2>$this->load->lang('<var>file_name</var>')</h2>
-<p>This function is an alias of the <a href="language.html">language loading function</a>: $this->lang->load()</p>
+<p>此函數同等於 <a href="language.html">語言(language) 載入函數</a>: $this->lang->load()</p>
 
 <h2>$this->load->config('<var>file_name</var>')</h2>
-<p>This function is an alias of the <a href="config.html">config file loading function</a>: $this->config->load()</p>
+<p>此函數同等於 <a href="config.html">config 檔案載入函數</a>: $this->config->load()</p>
 
 
 
