--- a/helpers/url_helper.html
+++ b/helpers/url_helper.html
@@ -62,26 +62,24 @@ URL 補助函數
 
 <h2>載入 URL 補助函數</h2>
 
-<p>可以利用下面程式碼載入 URL 補助函數:</p>
+<p>使用下列的程式碼載入此補助函數( 說明器 )：</p>
 <code>$this->load->helper('url');</code>
 
-<p>底下包含可用的函數:</p>
+<p>下列為可以使用的函數：</p>
 
 <h2>site_url()</h2>
 
-<p>回傳網站 URL，定義在您的 config 檔案裡面.  The index.php file (or whatever you have set as your
-site <dfn>index_page</dfn> in your config file) will be added to the URL，as will any URI segments you pass to the function.</p>
+<p>傳回您在config.php設定檔中指定的的網站 URL。index.php 檔 （或在您的設定檔config.php中作為您的網站 <dfn>index_page</dfn> 的任何設置） 將加到該 URL，將任何 URI 段參數傳遞給該函數。</p>
 
-<p>You are encouraged to use this function any time you need to generate a local URL so that your pages become more portable
-in the event your URL changes.</p>
+<p>任何時候要建立一個本地的 URL時，建議你使用本函數，以方便在URL改變事件中，您的頁面變得更可擕性。</p>
 
-<p>Segments can be optionally passed to the function as a string or an array.  Here is a string 參考範例:</p>
+<p>做為參數傳遞給該函數的 URI 段可以是一個字串，也可以是一個陣列。下面是一個字串的例子:</p>
 
 <code>echo site_url("news/local/123");</code>
 
-<p>The above example would return something like: http://example.com/index.php/news/local/123</p>
+<p>上面的例子會傳回類似：http://example.com/index.php/news/local/123 的URL。</p>
 
-<p>Here is an example of segments passed as an array:</p>
+<p>這是一個以陣列形式傳遞 URI 段的例子:</p>
 
 <code>
 $segments = array('news'，'local'，'123');<br />
@@ -90,49 +88,47 @@ echo site_url($segments);</code>
 
 
 <h2>base_url()</h2>
-<p>Returns your site base URL，as specified in your config file.  參考範例:</p>
+<p>傳回在 config.php 中設定的 base_url。 例如:</p>
 <code>echo base_url();</code>
 
 
 <h2>current_url()</h2>
-<p>Returns the full URL (including segments) of the page being currently viewed.</p>
+<p>傳回目前正在查看的頁面的完整URL(包括URL段)。</p>
 
 
 <h2>uri_string()</h2>
-<p>Returns the URI segments of any page that contains this function.  For example，if your URL was this:</p>
+<p>傳回任何包含了此函數的頁面的URI段。例如，你的URL是這樣子:</p>
 <code>http://some-site.com/blog/comments/123</code>
 
-<p>The function would return:</p>
+<p>該函數會傳回：</p>
 <code>blog/comments/123</code>
 
 
 <h2>index_page()</h2>
-<p>Returns your site "index" page，as specified in your config file.  參考範例:</p>
+<p>傳回在 config.php 中設定的 index_page。例如:</p>
 <code>echo index_page();</code>
 
 
 
 <h2>anchor()</h2>
 
-<p>Creates a standard HTML anchor link based on your local site URL:</p>
+<p>建立基於您的本地網站 URL 的標準 HTML 錨連結：</p>
 
 <code>&lt;a href="http://example.com">Click Here&lt;/a></code>
 
-<p>The tag has three optional parameters:</p>
+<p>這個標記有三個可以選擇的參數：</p>
 
 <code>anchor(<var>uri segments</var>，<var>text</var>，<var>attributes</var>)</code>
 
-<p>The first parameter can contain any segments you wish appended to the URL.  As with the <dfn>site_url()</dfn> function above,
-segments can be a string or an array.</p>
+<p>第一個參數包含你想附加到URL的任何段，像上面的site_url() 函數一樣，段可以是字串或陣列。</p>
 
-<p><strong>注意:</strong>&nbsp; If you are building links that are internal to your application do not include the base URL (http://...).  This
-will be added automatically from the information specified in your config file. Include only the URI segments you wish appended to the URL.</p>
+<p><strong>注意:</strong>&nbsp; 如果你建立在應用程式內部的鏈結沒有包含基本URL(http://...) ，這個參數會從你配置檔資訊中自動載入，包括只是你希望附加到URL的URI段。</p>
 
-<p>The second segment is the text you would like the link to say.  If you leave it blank，the URL will be used.</p>
+<p>第二個參數是你要傳給鏈結的文字，如果為空白，將會由URL替代。</p>
 
-<p>The third parameter can contain a list of attributes you would like added to the link.  The attributes can be a simple string or an associative array.</p>
+<p>第三個參數包含一組你要附加給鏈結的屬性，這些屬性可以是簡單的字串或相關的陣列。</p>
 
-<p>Here are some examples:</p>
+<p>以下是一些例子:</p>
 
 <code>echo anchor('news/local/123'，'My News');</code>
 
