translate string helper file

--- a/helpers/string_helper.html
+++ b/helpers/string_helper.html
@@ -76,11 +76,10 @@ String 補助函數
 
 
 <ul>
-<li><strong>alnum</strong>:&nbsp; Alpha-numeric string with lower and uppercase characters.</li>
-<li><strong>numeric</strong>:&nbsp; Numeric string.</li>
-<li><strong>nozero</strong>:&nbsp; Numeric string with no zeros.</li>
-<li><strong>unique</strong>:&nbsp; Encrypted with MD5 and uniqid(). 注意: The length parameter is not available for this type.
-Returns a fixed length 32 character string.</li>
+<li><strong>alnum</strong>:&nbsp; 含有大小寫字母以及數字。</li>
+<li><strong>numeric</strong>:&nbsp; 數字字串。</li>
+<li><strong>nozero</strong>:&nbsp; 不含零的數字字串。</li>
+<li><strong>unique</strong>:&nbsp; 用 MD5 and uniqid()加密的字串。注意：第二個長度參數在這種類型無效。均傳回一個固定32位長度的字串。</li>
 </ul>
 
 <p>使用範例:</p>
