modified number_helper file

--- a/helpers/number_helper.html
+++ b/helpers/number_helper.html
@@ -58,20 +58,20 @@ Number 補助函數
 
 <h1>Number 補助函數</h1>
 
-<p>The Number 補助函數 file contains functions that help you work with numeric data.</p>
+<p>數字補助函數檔案包含幫助您處理數字資料。</p>
 
 
 <h2>載入 補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('number');</code>
 
-<p>The following functions are available:</p>
+<p>下列為可以使用的函數：</p>
 
 
 <h2>byte_format()</h2>
 
-<p>Formats a numbers as bytes，based on size，and adds the appropriate suffix.  Examples:</p>
+<p>將文件容量大小以位元組(bytes)為單位格式化，並加上適合的對應縮寫單位。例如：</p>
 
 <code>
 echo byte_format(456); // Returns 456 Bytes<br />
