--- a/helpers/download_helper.html
+++ b/helpers/download_helper.html
@@ -59,21 +59,19 @@ Download 補助函數
 
 <h1>Download 補助函數</h1>
 
-<p>The Download 補助函數 lets you download data to your desktop.</p>
+<p>下載補助函數讓您下載資料到您的電腦桌面。</p>
 
 
 <h2>載入 補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('download');</code>
 
-<p>The following functions are available:</p>
+<p>下列為可以使用的函數：</p>
 
 <h2>force_download('<var>filename</var>'，'<var>data</var>')</h2>
 
-<p>Generates server headers which force data to be downloaded to your desktop. Useful with file downloads.
-The first parameter is the <strong>name you want the downloaded file to be named</strong>，the second parameter is the file data.
-參考範例:</p>
+<p>產生伺服器的標頭，強制資料被下載到您的電腦桌面。對檔案下載有幫助。第一個參數<strong>是你想要下載的檔案的名稱</strong>，第二個參數是檔案資料。 參考範例：</p>
 
 <code>
 $data = 'Here is some text!';<br />
@@ -82,7 +80,7 @@ $name = 'mytext.txt';<br />
 force_download($name，$data);
 </code>
 
-<p>If you want to download an existing file from your server you'll need to read the file into a string:</p>
+<p>如果你想在你的伺服器上下載一個現有的檔案，你必需將檔案讀到一字串中:</p>
 
 <code>
 $data = file_get_contents("/path/to/photo.jpg"); // Read the file's contents<br />
