--- a/helpers/path_helper.html
+++ b/helpers/path_helper.html
@@ -57,20 +57,20 @@ Path 補助函數
 
 <h1>Path 補助函數</h1>
 
-<p>The Path 補助函數 file contains functions that permits you to work with file paths on the server.</p>
+<p>路徑補助函數檔案包含讓您使用伺服器端的檔案路徑工作的函數。</p>
 
 
 <h2>載入 補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>使用下列的程式碼載入補助程式：</p>
 <code>$this->load->helper('path');</code>
 
-<p>The following functions are available:</p>
+<p>下列為可以使用的函數：</p>
 
 
 <h2>set_realpath()</h2>
 
-<p>Checks to see if the path exists. This function will return a server path without symbolic links or relative directory structures. An optional second argument will cause an error to be triggered if the path cannot be resolved.</p>
+<p>檢查路徑是否存在。此函數將傳回一個無符號連結或相對目錄結構的伺服器路徑。如果無法確定指定的路徑，則函數中的第二個參數為TRUE，會產生一個錯誤。</p>
 
 <code>$directory = '/etc/passwd';<br />
 echo set_realpath($directory);<br />
