--- a/libraries/ftp.html
+++ b/libraries/ftp.html
@@ -58,23 +58,21 @@ FTP 類別
 
 <h1>FTP 類別</h1>
 
-<p>CodeIgniter's FTP 類別 permits files to be transfered to a remote server. Remote files can also be moved，renamed,
-and deleted.  The FTP class also includes a "mirroring" function that permits an entire local directory to be recreated remotely via FTP.</p>
+<p>CodeIgniter的FTP 類別允許你將檔案傳輸至遠端伺服器。並且也可對遠端檔案作移動、重命名及刪除的動作。除此之外，FTP類別亦包含一"mirroring"函數，允許對本地端的整個目錄，經由FTP協定，在遠端主機上作鏡像的動作。</p>
 
-<p class="important"><strong>注意:</strong>&nbsp; SFTP and SSL FTP protocols are not supported，only standard FTP.</p>
+<p class="important"><strong>注意:</strong>&nbsp; FTP類別目前僅支援標準FTP，不包含SFTP及SSL FTP協定。</p>
 
-<h2>Initializing the 類別</h2>
+<h2>初始化類別</h2>
 
-<p>Like most other classes in CodeIgniter，the FTP class is initialized in your controller using the <dfn>$this->load->library</dfn> function:</p>
+<p>如同CodeIgniter的其他類別，FTP類別可在控制器(controller)裡，透過 <dfn>$this->load->library</dfn> 函式來初始化，如下所示:</p>
 
 <code>$this->load->library('ftp');</code>
-<p>Once loaded，the FTP object will be available using: <dfn>$this->ftp</dfn></p>
+<p>一旦載入此類別，便可以: <dfn>$this->ftp</dfn> 的方式來存取FTP物件。</p>
 
 
-<h2>Usage Examples</h2>
+<h2>使用範例</h2>
 
-<p>In this example a connection is opened to the FTP server，and a local file is read and uploaded in ASCII mode. The
-file permissions are set to 755.  注意: Setting permissions requires PHP 5.</p>
+<p>以下範例中，首先建立對FTP伺服器的連線，接著讀取本地端檔案並以ASCII模式上傳，最後將檔案權限設為755。注意：欲設定檔案權限，需PHP 5以上版本。</p>
 
 <code>
 $this->load->library('ftp');<br />
@@ -93,7 +91,7 @@ $this->ftp->close();
 </code>
 
 
-<p>In this example a list of files is retrieved from the server.</p>
+<p>下面的範例示範如何從伺服器中獲得檔案列表。</p>
 
 <code>
 $this->load->library('ftp');<br />
@@ -112,7 +110,7 @@ print_r($list);<br />
 $this->ftp->close();
 </code>
 
-<p>In this example a local directory is mirrored on the server.</p>
+<p>下面的範例，示範如何在遠端伺服器建立一本地端目錄的鏡像。</p>
 
 
 <code>
@@ -131,15 +129,14 @@ $this->ftp->close();
 </code>
 
 
-<h1>Function Reference</h1>
+<h1>函數說明</h1>
 
 <h2>$this->ftp->connect()</h2>
 
-<p>Connects and logs into to the FTP server. Connection preferences are set by passing an array
-to the function，or you can store them in a config file.</p>
+<p>連接並登入FTP伺服器。連接參數以陣列的方式傳遞給該函數。除此之外，也可將參數儲存在一設定檔中。</p>
 
 
-<p>Here is an example showing how you set preferences manually:</p>
+<p>以下範例說明如何手動設定相關參數：</p>
 
 <code>
 $this->load->library('ftp');<br />
@@ -154,61 +151,58 @@ $config['debug']&nbsp;&nbsp;&nbsp;&nbsp;= TRUE;<br />
 $this->ftp->connect($config);<br />
 </code>
 
-<h3>Setting FTP Preferences in a Config File</h3>
+<h3>在設定檔中設置FTP參數</h3>
 
-<p>If you prefer you can store your FTP preferences in a config file.
-Simply create a new file called the <var>ftp.php</var>， add the <var>$config</var>
-array in that file. Then save the file at <var>config/ftp.php</var> and it will be used automatically.</p>
+<p>如果你想將FTP相關參數儲存在設定檔裡，僅需建立一名為<var>ftp.php</var>的檔案，將<var>$config</var>陣列
+增加到該檔案中，並儲存至<var>config/ftp.php</var>，如此一來，該設定檔便會自動被讀取。</p>
 
-<h3>Available connection options:</h3>
+<h3>可用連線參數：</h3>
 
 
 <ul>
-<li><strong>hostname</strong> - the FTP hostname.  Usually something like:&nbsp; <dfn>ftp.example.com</dfn></li>
-<li><strong>username</strong> - the FTP username.</li>
-<li><strong>password</strong> - the FTP password.</li>
-<li><strong>port</strong> - The port number. Set to <dfn>21</dfn> by default.</li>
-<li><strong>debug</strong> - <kbd>TRUE/FALSE</kbd> (boolean). Whether to enable debugging to display error messages.</li>
-<li><strong>passive</strong> - <kbd>TRUE/FALSE</kbd> (boolean). Whether to use passive mode.  Passive is set automatically by default.</li>
+<li><strong>hostname</strong> - FTP主機名稱，其格式通常像是：&nbsp; <dfn>ftp.example.com</dfn></li>
+<li><strong>username</strong> - FTP使用者名稱</li>
+<li><strong>password</strong> - FTP使用者密碼</li>
+<li><strong>port</strong> - 通訊埠號碼，預設值為 <dfn>21</dfn></li>
+<li><strong>debug</strong> - <kbd>TRUE/FALSE</kbd> (布林值)。決定是否開啟偵錯模式，以顯示錯誤訊息。</li>
+<li><strong>passive</strong> - <kbd>TRUE/FALSE</kbd> (布林值)。決定是否使用被動傳輸模式，此模式預設是開啟的。</li>
 </ul>
 
 
 
 <h2>$this->ftp->upload()</h2>
 
-<p>Uploads a file to your server.  You must supply the local path and the remote path，and you can optionally set the mode and permissions.
-參考範例:</p>
+<p>上傳一檔案至伺服器，本地端路徑及遠端路徑為必要參數，傳輸模式及檔案權限為選擇性參數。參考範例如下：</p>
 
 
 <code>$this->ftp->upload('/local/path/to/myfile.html'，'/public_html/myfile.html'，'ascii'，0775);</code>
 
-<p><strong>Mode options are:</strong>&nbsp; <kbd>ascii</kbd>，<kbd>binary</kbd>，and <kbd>auto</kbd> (the default). If
-<kbd>auto</kbd> is used it will base the mode on the file extension of the source file.</p>
+<p><strong>傳輸模式包含:</strong>&nbsp; <kbd>ascii</kbd>，<kbd>binary</kbd>，及<kbd>auto</kbd> (預設值)。若是選擇
+<kbd>auto</kbd> 模式，則會根據來源檔的副檔名來決定所要使用的傳輸模式。</p>
 
-<p>Permissions are available if you are running PHP 5 and can be passed as an <kbd>octal</kbd> value in the fourth parameter.</p>
-
+<p>PHP 5 以後的版本，支援檔案權限的設定。可透過傳遞一<kbd>八進制</kbd>的權限值至第四個參數，來設定檔案權限。</p>
 
 <h2>$this->ftp->rename()</h2>
-<p>Permits you to rename a file.  Supply the source file name/path and the new file name/path.</p>
+<p>檔案重新命名，參數為來源檔名/路徑及目的檔名/路徑：</p>
 
 <code>
-// Renames green.html to blue.html<br />
+// 更改 green.html 檔名為 blue.html<br />
 $this->ftp->rename('/public_html/foo/green.html'，'/public_html/foo/blue.html');
 </code>
 
 <h2>$this->ftp->move()</h2>
-<p>Lets you move a file.  Supply the source and destination paths:</p>
+<p>搬移檔案，參數為來源及目的路徑：</p>
 
 <code>
-// Moves blog.html from "joe" to "fred"<br />
+// 將 blog.html 從"joe" 目錄移至"fred" 目錄<br />
 $this->ftp->move('/public_html/joe/blog.html'，'/public_html/fred/blog.html');
 </code>
 
-<p>注意: if the destination file name is different the file will be renamed.</p>
+<p>注意：若目的檔名與來源檔名不同，則檔案將被重新命名。</p>
 
 
 <h2>$this->ftp->delete_file()</h2>
-<p>Lets you delete a file.  Supply the source path with the file name.</p>
+<p>刪除檔案，參數為來源檔案路徑及名稱：</p>
 
 <code>
 $this->ftp->delete_file('/public_html/joe/blog.html');
@@ -216,11 +210,10 @@ $this->ftp->delete_file('/public_html/joe/blog.html');
 
 
 <h2>$this->ftp->delete_dir()</h2>
-<p>Lets you delete a directory and everything it contains.  Supply the source path to the directory with a trailing slash.</p>
+<p>刪除某目錄及其包含的所有檔案。需提供欲刪除目錄之路徑作為參數，且最後須加上斜線。</p>
 
-<p class="important"><strong>Important</strong>&nbsp; Be VERY careful with this function.  It will recursively delete 
-<b>everything</b> within the supplied path，including sub-folders and all files.  Make absolutely sure your path is correct.
-Try using the <kbd>list_files()</kbd> function first to verify that your path is correct.</p>
+<p class="important"><strong>重要</strong>&nbsp; 請非常謹慎地使用此函數，此函數將會遞迴刪除指定目錄下的 
+<b>所有東西</b> ，包含子目錄及所有檔案。因此建議在使用此函數前，先利用 <kbd>list_files()</kbd> 函數來確保所提供的路徑正確。</p>
 
 <code>
 $this->ftp->delete_dir('/public_html/path/to/folder/');
@@ -229,8 +222,7 @@ $this->ftp->delete_dir('/public_html/path/to/folder/');
 
 
 <h2>$this->ftp->list_files()</h2>
-<p>Permits you to retrieve a list of files on your server returned as an <dfn>array</dfn>.  You must supply 
-the path to the desired directory.</p>
+<p>提供欲查詢之目錄路徑為參數，此函數回傳伺服器上的檔案列表為一 <dfn>陣列</dfn>。</p>
 
 <code>
 $list = $this->ftp->list_files('/public_html/');<br />
@@ -241,9 +233,7 @@ print_r($list);
 
 <h2>$this->ftp->mirror()</h2>
 
-<p>Recursively reads a local folder and everything it contains (including sub-folders) and creates a 
-mirror via FTP based on it.  Whatever the directory structure of the original file path will be recreated on the server.
-You must supply a source path and a destination path:</p>
+<p>遞迴讀取本地端目錄下所有內容（包含子目錄及檔案），並透過FTP建立此目錄之鏡像。來源目錄之完整結構皆會被複製到伺服器端，需提供來源路徑及目的路徑作為參數：</p>
 
 <code>
 $this->ftp->mirror('/path/to/myfolder/'，'/public_html/myfolder/');
@@ -253,21 +243,20 @@ $this->ftp->mirror('/path/to/myfolder/'，'/public_html/myfolder/');
 
 <h2>$this->ftp->mkdir()</h2>
 
-<p>Lets you create a directory on your server.  Supply the path ending in the folder name you wish to create，with a trailing slash.
-Permissions can be set by passed an <kbd>octal</kbd> value in the second parameter (if you are running PHP 5).</p>
+<p>在伺服器上建立一目錄。需給定欲建立目錄之完整路徑（包含結尾斜線）以作為參數。並可透過傳遞一<kbd>八進制</kbd>權限值至第二個參數以設定檔案權限（僅限PHP 5以上版本）。</p>
 
 <code>
-// Creates a folder named "bar"<br />
+// 建立一名為"bar" 的目錄<br />
 $this->ftp->mkdir('/public_html/foo/bar/'，DIR_WRITE_MODE);
 </code>
 
 
 <h2>$this->ftp->chmod()</h2>
 
-<p>Permits you to set file permissions.  Supply the path to the file or folder you wish to alter permissions on:</p>
+<p>更改檔案權限，需提供欲設定權限之目錄或檔案的路徑作為參數：</p>
 
 <code>
-// Chmod "bar" to 777<br />
+// 更改"bar" 目錄的權限為 777<br />
 $this->ftp->chmod('/public_html/foo/bar/'，DIR_WRITE_MODE);
 </code>
 
@@ -275,8 +264,7 @@ $this->ftp->chmod('/public_html/foo/bar/'，DIR_WRITE_MODE);
 
 
 <h2>$this->ftp->close();</h2>
-<p>Closes the connection to your server.  It's recommended that you use this when you are finished uploading.</p>
-
+<p>關閉對伺服器的連線，建議在完成上傳動作後使用此函數以關閉連線。</p>
 
 
 
