--- a/helpers/array_helper.html
+++ b/helpers/array_helper.html
@@ -58,35 +58,34 @@ Array 補助函數
 
 <h1>Array 補助函數</h1>
 
-<p>The Array 補助函數 file contains functions that assist in working with arrays.</p>
+<p>Array 補助函數提供一些輔助陣列操作的相關函數。</p>
 
 
-<h2>載入 補助函數</h2>
+<h2>載入補助函數</h2>
 
-<p>This helper is loaded using the following code:</p>
+<p>補助函數使用下列方式載入：</p>
 <code>$this->load->helper('array');</code>
 
-<p>The following functions are available:</p>
+<p>可用函數如下所示：</p>
 
 <h2>element()</h2>
 
-<p>Lets you fetch an item from an array.  The function tests whether the array index is set and whether it has a value.  If
-a value exists it is returned.  If a value does not exist it returns FALSE，or whatever you've specified as the default value via the third parameter.  參考範例:</p>
+<p>從陣列中讀取元素，此函數會檢查陣列索引是否已設定，且陣列值是否存在。若存在則傳回陣列值，否則傳回False或是任何你所指定的預設值（透過函數第三個參數設定）。參考範例如下：</p>
 
 <code>
 $array = array('color' => 'red'，'shape' => 'round'，'size' => '');<br />
 <br />
-// returns "red"<br />
+// 回傳 "red"<br />
 echo element('color'，$array);<br />
 <br />
-// returns NULL<br />
+// 回傳 NULL<br />
 echo element('size'，$array，NULL);
 </code>
 
 
 <h2>random_element()</h2>
 
-<p>Takes an array as input and returns a random element from it.  使用範例:</p>
+<p>根據指定的陣列，隨機傳回一該陣列之元素。使用範例如下：</p>
 
 <code>$quotes = array(<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work，the more luck I seem to have. - Thomas Jefferson",<br />
