--- a/installation/downloads.html
+++ b/installation/downloads.html
@@ -58,7 +58,8 @@
 <h1>下載 CodeIgniter</h1>
 
 <ul>
-<li><a href="http://www.codeigniter.com/download.php">CodeIgniter V 1.7.1 (目前版本)</a></li>
+<li><a href="http://www.codeigniter.com/download.php">CodeIgniter V 1.7.2 (目前版本)</a></li>
+<li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.7.1.zip">CodeIgniter V 1.7.1</a></li>
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.7.0.zip">CodeIgniter V 1.7.0</a></li>
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.6.3.zip">CodeIgniter V 1.6.3</a></li>
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.6.2.zip">CodeIgniter V 1.6.2</a></li>
