update changelog.htm to V1.7.2

--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -60,6 +60,7 @@
 <p>請依您的版本詳閱更新注意事項。.</p>
 
 <ul>
+<li><a href="upgrade_172.html">更新 1.7.1 到 1.7.2</a></li>
 <li><a href="upgrade_171.html">更新 1.7.0 到 1.7.1</a></li>
 <li><a href="upgrade_170.html">更新 1.6.3 到 1.7.0</a></li>
 <li><a href="upgrade_163.html">更新 1.6.2 到 1.6.3</a></li>
