update some change to V1.7.2

--- a/overview/features.html
+++ b/overview/features.html
@@ -107,7 +107,7 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="at_a_glance.html">CodeIgniter 匆匆一瞥</a>
+上個主題:&nbsp;&nbsp;<a href="cheatsheets.html">CodeIgniter Cheatsheets</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
