--- a/toc.html
+++ b/toc.html
@@ -81,6 +81,7 @@
 <ul>
 	<li><a href="./overview/getting_started.html">入門</a></li>
 	<li><a href="./overview/at_a_glance.html">CodeIgniter 匆匆一瞥</a></li>
+	<li><a href="./overview/cheatsheets.html">CodeIgniter Cheatsheets</a></li>
 	<li><a href="./overview/features.html">支援功能</a></li>
 	<li><a href="./overview/appflow.html">程式流程圖</a></li>
 	<li><a href="./overview/mvc.html">模型-檢視-控制器</a></li>
@@ -125,6 +126,7 @@
 <ul>
 <li><a href="./libraries/benchmark.html">Benchmarking 類別</a></li>
 <li><a href="./libraries/calendar.html">Calendaring 類別</a></li>
+<li><a href="./libraries/cart.html">Cart 類別</a></li>
 <li><a href="./libraries/config.html">Config 類別</a></li>
 <li><a href="./database/index.html">Database 類別</a></li>
 <li><a href="./libraries/email.html">Email 類別</a></li>
