--- a/libraries/zip.html
+++ b/libraries/zip.html
@@ -57,8 +57,7 @@ Zip Encoding 類別
 
 
 <h1>Zip Encoding 類別</h1>
-<p>CodeIgniter's Zip Encoding 類別 classes permit you to create Zip archives. Archives can be downloaded to your
-desktop or saved to a directory.</p>
+<p>CodeIgniter's Zip Encoding 類別云許您建立 ZIP 壓縮檔案。 您可以下載壓縮檔案到您電腦桌面或者指定的資料夾。</p>
 
 
 <h2>Initializing the 類別</h2>
